#36 Fix icon misalignment

--- a/less/pageNav.less
+++ b/less/pageNav.less
@@ -30,6 +30,14 @@ html {
     margin: @item-margin;
   }
 
+  &__btn-icon {
+    display: inline-flex;
+
+    .icon {
+      display: inline-flex;
+    }
+  }
+
   // buttons with text and icon (left aligned icon as default)
   // --------------------------------------------------
   &__btn.btn-icon:not(.icon-is-right).btn-text .icon {
